--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,17 @@ body{
     font-family: 'poppins', sans-serif;
     margin: 0;
 }
+.container{
+    margin: auto;
+    display: flex;
+    max-width: 800px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+.flex{
+    display:flex;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+}
