--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,16 @@ body{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
 }
+.header{
+    display: flex;
+    margin: 15px;
+    
+}
+input, button{
+    border:1px solid #dedede;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    font-size: 14px;
+    padding: 8px 10px;
+    margin: 0;
+}
