--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,22 @@ input, button{
     padding: 8px 10px;
     margin: 0;
 }
+input[type="text"]{
+    width: 370px;
+}
+input:focus{
+    outline: 0;
+}
+.search-btn{
+    cursor: pointer;
+    border-left: 0;
+    border-radius: 0;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.random-btn{
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+}
