--- a/css/styles.css
+++ b/css/styles.css
@@ -53,3 +53,17 @@ input:focus{
     cursor: pointer;
     margin-left: 10px;
 }
+.meals{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 20px;
+    margin-top: 20px;
+}
+.meal{
+    cursor: pointer;
+    position: relative;
+    height: 200px;
+    width: 200px;
+    text-align: center;
+    border-radius: 2px;
+}
