--- a/css/styles.css
+++ b/css/styles.css
@@ -67,3 +67,77 @@ input:focus{
     text-align: center;
     border-radius: 2px;
 }
+.meal img{
+    width: 1000%;
+    height: 100%;
+    border: 1px solid #dedede;
+}
+.meal-info{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+    cursor: pointer;
+    transition: opacity 0.3s ease-in;
+    opacity: 0;
+}
+.meal:hover .meal-info{
+    opacity: 1;
+}
+.single-meal{
+    margin: 30px auto;
+    width: 80%;
+}
+.single-meal img{
+    width:380px;
+    margin: 15px;
+    border: 1px #fff solid;
+    border-radius: 3px;
+
+}
+.single-meal-info{
+    background-color: #fff;
+    color: #4c6ca0;
+    margin: 20px;
+    padding: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    border: 1px #f4f4f4 solid;
+    border-radius: 5px;
+    box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
+}
+.single-meal ul li {
+    border: 1px solid #ededed;
+    /* border-radius: 5px; */
+    background-color: #fff;
+    /* display: inline-block; */
+    color: #4c6ca0;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 5px;
+    margin: 0 5px;
+  }
+  
+  .link {
+    background-color: #ff0000;
+    border: 1px solid #cdcdcd;
+    font-size: 19px;
+    font-weight: bold;
+    padding: 4px;
+    border-radius: 5px;
+    margin: 20px;
+    cursor: pointer;
+    text-decoration: none;
+    width: 25%;
+    box-shadow: 0 2rem 5rem 1rem rgba(0, 0, 0, 0.1);
+    margin: auto;
+  }
