Edits colours to fit design

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
   }
   
   body {
-    background-color: #4c6ca0;
+    background-color: rgb(54, 54, 184);
     color: white;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
